Add template file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>
 
 <!-- Pick the script that handles the game's logic -->
-<script src="game.js"></script>
+<script src="template.js"></script>
 
 <!-- This script handles user dragging input -->
 <script>
