--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </style>
 
 <!-- Pick the script that handles the game's logic -->
-<script src="game.js"></script>
+<script src="classic.js"></script>
 
 <!-- This script handles user dragging input -->
 <script>
@@ -200,8 +200,8 @@
 
     // Explicit board settings
     let squareSize = 100;
-    let primaryColor = "#eeeeee";
-    let secondaryColor = "#111111";
+    let primaryColor = "#dddddd";
+    let secondaryColor = "#222222";
     let chessSet = game.chessSet != null? game.chessSet : "drawn";
 
     // Implicit board settings
