Fix touch input

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         function getMousePosition(evt) {
             var CTM = svg.getScreenCTM();
-            if (evt.touches) { evt = evt.touches[0]; }
+            if (evt.touches) { evt = evt.touches[0] || evt.changedTouches [0]; }
             return {
                 x: (evt.clientX - CTM.e) / CTM.a,
                 y: (evt.clientY - CTM.f) / CTM.d
