--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     function changeChessSet(value)
     {
-        if (value == null) return;
+        if (value == null || value == "") return;
         chessSet = value;
         drawBoard();
     }
