--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 </style>
 
 <!-- Pick the script that handles the game's logic -->
-<script src="classic.js"></script>
+<script src="gamemodes/classic.js"></script>
+<script src="lib/board.js"></script>
 
 <!-- This script handles user dragging input -->
 <script>
